# SORR-AD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: demo_metrics.py  download_mvtec.py  download_visa.py  extract_support_features.py  inspect_dataset.py
src/sorrad/: __init__.py  datasets.py  features.py  metrics.py
